<resources>
    <string name="app_name">Java Mini Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_hotflavours">Hot Flavours</string>
    <string name="flavour_title_placeholder">FlavourItemTitle</string>
    <string name="login_title">Welcome to Cake Boutique!
        Please login below or create new account!</string>
    <string name="welcome_message">Welcome wait a sec let us check if you are already Logged In!</string>
    <string name="signup_title">Hello welcome to cake boutique please enter a username and password to proceed further!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_flavours">All Flavours</string>
    <string name="reset_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="username">Username</string>
    <string name="old_password">old_password</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">new_password</string>
</resources>