<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_view_gallery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    android:weightSum="4"
    tools:context=".ui.slideshow.SlideshowFragment">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="294dp"
            android:layout_height="71dp"
            android:fontFamily="@font/monserrat_alternatives_regular"
            android:text="@string/reset_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.659" />

        <EditText
            android:id="@+id/username"
            android:layout_width="293dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/old_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/old_password"
            android:layout_width="297dp"
            android:layout_height="50dp"
            android:layout_marginBottom="27dp"
            android:ems="10"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="297dp"
            android:layout_height="50dp"
            android:layout_marginBottom="23dp"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="297dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="confirm_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/button_reset_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_reset_password"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="330dp"
            android:layout_height="49dp"
            android:layout_marginBottom="200dp"
            android:background="#9C27B0"
            android:fontFamily="@font/monserrat_alternatives_regular"
            android:text="@string/change_password"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.437" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>